<resources>
    <string name="app_name">Live Attendance App</string>
    <string name="hello_sign_in_your_account">Hello, Sign In Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="history">History</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="default_text" translatable="false">-</string>
    <string name="your_photo">Your Photo</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="please_field_your_email">Please Field Your Email</string>
    <string name="please_use_valid_email">Please Use Valid Email</string>
    <string name="please_field_your_password">Please Field Your Password</string>
    <string name="required_permission">Required Permission</string>
    <string name="not_granted">Not Granted</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="search_your_location">Search Your Location...</string>
    <string name="failed_to_capture_image">Failed To Capture Image</string>
    <string name="alert">Alert</string>
    <string name="please_take_your_photo">Please Take Your Photo</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_check_in">Success Check In</string>
    <string name="success_check_out">Success Check Out</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="your_already_present">Your Already Present</string>
    <string name="your_password_has_been_update">Your Password Has Been Update</string>
    <string name="your_password_didnt_match">Your Password Didn\'t Match</string>
</resources>